Add github link

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <a href="https://twitter.com/fake_industries">@fake_industries</a>
   <br />
   <a href="mailto:info@fake.nz">email</a>
+  <br />
+  <a href="https://github.com/fake-industries">GitHub</a>
 </body>
 </html> 
