Add about page and fuzz ball product page

--- a/fuzzball.html
+++ b/fuzzball.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Fake Industries</title>
+  <title>Fuzz Ball - Fake Industries</title>
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
@@ -10,7 +10,13 @@
     <a href="/">Home</a> | <a href="/fuzzball.html">Fuzz Ball</a> | <a href="/about.html">About</a>
   </div>
   <div class="content">
-    <img src="img/logo.png" alt="Fake Industries" />
+    <p>Fuzz ball is an open source VST audio plugin written in Rust.</p>
+    <ul>
+      <li>Fuzz control adjusts amount of Fuzz.</li>
+      <li>Bounce control is an additional fuzz controller.</li>
+      <li>Volume controls the volume.</li>
+    </ul>
+    <a href="https://github.com/fake-industries/fuzzball"><img src="img/fuzzball_screenshot.png" alt="Fuzz Ball audio plugin screenshot" /></a>
   </div>
   <div class="footer">
     <a href="https://twitter.com/fake_industries">@fake_industries</a> | <a href="mailto:info@fake.nz">email</a> | <a href="https://github.com/fake-industries">github</a>
