--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Fake Industries</title>
+  <title>About - Fake Industries</title>
   <link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
@@ -10,6 +10,8 @@
     <a href="/">Home</a> | <a href="/fuzzball.html">Fuzz Ball</a> | <a href="/about.html">About</a>
   </div>
   <div class="content">
+    <p>Fake Industries is a boutique software development startup in Wellington, New Zealand.</p>
+    <p>We love Free Open Source software and we aim to release source code for all our software products.</p>
     <img src="img/logo.png" alt="Fake Industries" />
   </div>
   <div class="footer">
@@ -17,3 +19,4 @@
   </div>
 </body>
 </html> 
+
