--- a/fuzzball.html
+++ b/fuzzball.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <div class="header">
-    <a href="/">Home</a> | <a href="/fuzzball.html">Fuzz Ball</a> | <a href="/about.html">About</a>
+    <a class="button"href="/">Home</a>&nbsp;<a class="button"href="/fuzzball.html">Fuzz Ball</a>&nbsp;<a class="button"href="/about.html">About</a>
   </div>
+  <hr />
   <div class="content">
     <p>Fuzz ball is an open source VST audio plugin written in Rust.</p>
     <ul>
@@ -16,10 +17,14 @@
       <li>Bounce control is an additional fuzz controller.</li>
       <li>Volume controls the volume.</li>
     </ul>
+    <p>Source code: <a href="https://github.com/fake-industries/fuzzball">fake-industries/fuzzball</a></p>
     <a href="https://github.com/fake-industries/fuzzball"><img src="img/fuzzball_screenshot.png" alt="Fuzz Ball audio plugin screenshot" /></a>
   </div>
+  <hr />
   <div class="footer">
-    <a href="https://twitter.com/fake_industries">@fake_industries</a> | <a href="mailto:info@fake.nz">email</a> | <a href="https://github.com/fake-industries">github</a>
+    <a class="button"href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button"href="mailto:info@fake.nz">email</a>&nbsp;<a class="button"href="https://github.com/fake-industries">github</a>
+    <br />
+    <p>Copyright &#169; 2020 Fake Industries.</p>
   </div>
 </body>
 </html> 
