--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 </head>
 <body>
   <div class="header">
-    <a href="/">Home</a> | <a href="/fuzzball.html">Fuzz Ball</a> | <a href="/about.html">About</a>
+    <a class="button"href="/">Home</a>&nbsp;<a class="button"href="/fuzzball.html">Fuzz Ball</a>&nbsp;<a class="button"href="/about.html">About</a>
   </div>
+  <hr />
   <div class="content">
     <img src="img/logo.png" alt="Fake Industries" />
   </div>
+  <hr />
   <div class="footer">
-    <a href="https://twitter.com/fake_industries">@fake_industries</a> | <a href="mailto:info@fake.nz">email</a> | <a href="https://github.com/fake-industries">github</a>
+    <a class="button"href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button"href="mailto:info@fake.nz">email</a>&nbsp;<a class="button"href="https://github.com/fake-industries">github</a>
+    <br />
+    <p>Copyright &#169; 2020 Fake Industries.</p>
   </div>
 </body>
 </html> 
