Update fuzz ball page. * Add download link. * Add soundcloud demo.

--- a/fuzzball.html
+++ b/fuzzball.html
@@ -7,22 +7,28 @@
 </head>
 <body>
   <div class="header">
-    <a class="button"href="/">Home</a>&nbsp;<a class="button"href="/fuzzball.html">Fuzz Ball</a>&nbsp;<a class="button"href="/about.html">About</a>
+    <a class="button" href="/">Home</a>&nbsp;<a class="button" href="/fuzzball.html">Fuzz Ball</a>&nbsp;<a class="button" href="/about.html">About</a>
   </div>
   <hr />
   <div class="content">
     <p>Fuzz ball is an open source VST audio plugin written in Rust.</p>
+    <p>Currently available for MacOS only.</p>
     <ul>
       <li>Fuzz control adjusts amount of Fuzz.</li>
       <li>Bounce control is an additional fuzz controller.</li>
       <li>Volume controls the volume.</li>
     </ul>
-    <p>Source code: <a href="https://github.com/fake-industries/fuzzball">fake-industries/fuzzball</a></p>
+    <div class="links">
+      <a class="button" href="#demo">Demo</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball/releases/download/v1/FuzzBall-v1.pkg">Download (MacOS Only)</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball">Source Code</a>
+    </div>
     <a href="https://github.com/fake-industries/fuzzball"><img src="img/fuzzball_screenshot.png" alt="Fuzz Ball audio plugin screenshot" /></a>
+    <h2 id="demo">Demo</h2>
+    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1129448620&color=%23ff810c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/fake_industries" title="Fake Industries" target="_blank" style="color: #cccccc; text-decoration: none;">Fake Industries</a> · <a href="https://soundcloud.com/fake_industries/sets/fake-industries-fuzz-ball-fuzz-audio-plugin" title="Fake Industries - Fuzz Ball - Fuzz Audio Plugin" target="_blank" style="color: #cccccc; text-decoration: none;">Fake Industries - Fuzz Ball - Fuzz Audio Plugin</a></div>
   </div>
   <hr />
   <div class="footer">
-    <a class="button"href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button"href="mailto:info@fake.nz">email</a>&nbsp;<a class="button"href="https://github.com/fake-industries">github</a>
+    <a class="button" href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button" href="mailto:info@fake.nz">email</a>&nbsp;<a class="button" href="https://github.com/fake-industries">github</a>
     <br />
     <p>Copyright &#169; 2020 Fake Industries.</p>
   </div>
