--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="header">
-    <a class="button"href="/">Home</a>&nbsp;<a class="button"href="/fuzzball.html">Fuzz Ball</a>&nbsp;<a class="button"href="/about.html">About</a>
+    <a class="button" href="/">Home</a>&nbsp;<a class="button" href="/fuzzball.html">Fuzz Ball</a>&nbsp;<a class="button" href="/about.html">About</a>
   </div>
   <hr />
   <div class="content">
@@ -15,7 +15,7 @@
   </div>
   <hr />
   <div class="footer">
-    <a class="button"href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button"href="mailto:info@fake.nz">email</a>&nbsp;<a class="button"href="https://github.com/fake-industries">github</a>
+    <a class="button" href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button" href="mailto:info@fake.nz">email</a>&nbsp;<a class="button" href="https://github.com/fake-industries">github</a>&nbsp;<a class="button" href="https://soundcloud.com/fake_industries">Soundcloud</a>
     <br />
     <p>Copyright &#169; 2020 Fake Industries.</p>
   </div>
