Change footer link name Soundcloud to soundcloud

--- a/fuzzball.html
+++ b/fuzzball.html
@@ -28,7 +28,7 @@
   </div>
   <hr />
   <div class="footer">
-    <a class="button" href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button" href="mailto:info@fake.nz">email</a>&nbsp;<a class="button" href="https://github.com/fake-industries">github</a>&nbsp;<a class="button" href="https://soundcloud.com/fake_industries">Soundcloud</a>
+    <a class="button" href="https://twitter.com/fake_industries">@fake_industries</a>&nbsp;<a class="button" href="mailto:info@fake.nz">email</a>&nbsp;<a class="button" href="https://github.com/fake-industries">github</a>&nbsp;<a class="button" href="https://soundcloud.com/fake_industries">soundcloud</a>
     <br />
     <p>Copyright &#169; 2020 Fake Industries.</p>
   </div>
