--- a/fuzzball.html
+++ b/fuzzball.html
@@ -11,20 +11,30 @@
   </div>
   <hr />
   <div class="content">
-    <p>Fuzz ball is an open source VST audio plugin written in Rust.</p>
-    <p>Currently available for MacOS only.</p>
-    <ul>
-      <li>Fuzz control adjusts amount of Fuzz.</li>
-      <li>Bounce control is an additional fuzz controller.</li>
-      <li>Volume controls the volume.</li>
-    </ul>
-    <div class="links">
-      <a class="button" href="#demo">Demo</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball/releases/download/v1/FuzzBall-v1.pkg">Download (MacOS Only)</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball">Source Code</a>
+    <div class="intro">
+      <div>
+        <a href="https://github.com/fake-industries/fuzzball"><img src="img/fuzzball_screenshot.png" alt="Fuzz Ball audio plugin screenshot" /></a>
+      </div>
+      <div>
+        <p>Fuzz ball is an open source VST audio plugin written in Rust.</p>
+        <p>Currently available for MacOS only.</p>
+        <ul>
+          <li>Fuzz control adjusts amount of Fuzz.</li>
+          <li>Bounce control is an additional fuzz controller.</li>
+          <li>Volume controls the volume.</li>
+        </ul>
+      </div>
     </div>
-    <a href="https://github.com/fake-industries/fuzzball"><img src="img/fuzzball_screenshot.png" alt="Fuzz Ball audio plugin screenshot" /></a>
+    <div class="links">
+      <a class="button" href="#demo">Demo</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball/releases/download/v1/FuzzBall-v1.pkg">Download (MacOS Only)</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball">Source Code</a>&nbsp;<a class="button" href="#license">License</a>
+    </div>
     <h2 id="demo">Demo</h2>
-    <iframe width="100%" height="450" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1129448620&color=%23ff810c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+    <iframe width="100%" height="350" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1129448620&color=%23ff810c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
     <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/fake_industries" title="Fake Industries" target="_blank" style="color: #cccccc; text-decoration: none;">Fake Industries</a> · <a href="https://soundcloud.com/fake_industries/sets/fake-industries-fuzz-ball-fuzz-audio-plugin" title="Fake Industries - Fuzz Ball - Fuzz Audio Plugin" target="_blank" style="color: #cccccc; text-decoration: none;">Fake Industries - Fuzz Ball - Fuzz Audio Plugin</a></div>
+    <h2 id="license">License</h2>
+    <p>This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</p>
+    <p>This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the <a href="https://github.com/fake-industries/fuzzball/blob/master/LICENSE">GNU General Public License</a> for more details.</p>
+    <p>This program uses following <a href="https://github.com/fake-industries/fuzzball/blob/master/THIRD_PARTY_LIBRARIES_LICENSES">third party libraries</a>.</p>
   </div>
   <hr />
   <div class="footer">
@@ -33,4 +43,4 @@
     <p>Copyright &#169; 2020 Fake Industries.</p>
   </div>
 </body>
-</html> 
+</html>
