Add SEO related aditions

--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
  <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="description" content="About Fake Industries; A boutique software development startup from New Zealand specializing in audio software." />
 
   <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
