--- a/fuzzball.html
+++ b/fuzzball.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="links">
-      <a class="button" href="#demo">Demo</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball/releases/download/v1/FuzzBall-v1.pkg">Download (MacOS Only)</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball">Source Code</a>&nbsp;<a class="button" href="#license">License</a>
+      <a class="button" href="#demo">Demo</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball/releases/download/v1.1/FuzzBall-v1.1.pkg">Download (MacOS Only)</a>&nbsp;<a class="button" href="https://github.com/fake-industries/fuzzball">Source Code</a>&nbsp;<a class="button" href="#license">License</a>
     </div>
     <h2 id="demo">Demo</h2>
     <iframe width="100%" height="350" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1129448620&color=%23ff810c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
